--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <div class="box">
                     <img src="img/ikona4.png" alt="icon4">
                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                    <p>Napis</p>
                 </div>
             </div>
         </div>
