--- a/index.html
+++ b/index.html
@@ -41,10 +41,31 @@
                 <div class="box">
                     <img src="img/ikona4.png" alt="icon4">
                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-                    <p>Napis</p>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="content-about-us">
+        <div class="left"></div>
+        <div class="right"></div>
+        <div class="top">
+            <div class="image-suit"></div>
+            <div class="description">
+               <h3>Investments Products</h3>
+               <p>Posuere ac ut consequat semper viverra nam libero justo laoreet. Aliquam nulla facilisi cras fermentum odio eu feugiat pretium nibh. Sit amet est placerat in egestas erat. Urna duis convallis convallis tellus id interdum.</p> 
+               <button>Learn More</button>
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="description">
+                <h3>Valuation Models</h3>
+                <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p> 
+                <button>Learn More</button>
+             </div>
+             <div class="image-wallet"></div>
+             
+        </div>
+
     </div>
 
     <footer>
