--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <div class="menu-container">
             <ul class="menu-list">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Shop</a></li>
+                <li><a href="#about-us">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
@@ -45,7 +44,7 @@
             </div>
         </div>
     </div>
-    <div class="content-about-us">
+    <div class="content-about-us" id="about-us">
         <div class="left"></div>
         <div class="right"></div>
         <div class="top">
