--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="menu-list">
                 <li><a href="#">Home</a></li>
                 <li><a href="#about-us">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </header>
@@ -62,10 +62,29 @@
                 <button>Learn More</button>
              </div>
              <div class="image-wallet"></div>
-             
         </div>
-
     </div>
+     <div class="content-contact" id="contact">
+         <div class="contact-bgtop"></div>
+         <div class="contact-bottom">
+             <div class="image-contact"></div>
+             <div class="contact-container">
+             <div class="contact-form">
+                 <h3>Contact Us</h3>
+                 <form action="*" method="POST">
+                    <input type="name" placeholder="Enter your name" onfocus="this.placeholder=''" onblur="this.placeholder='Enter your name'">
+                    <input type="email" placeholder="Enter a valid email address" onfocus="this.placeholder=''" onblur="this.placeholder='Enter your name'">
+                    <textarea name="texarea" rows="" cols=""></textarea>
+                    <button>SUBMIT</button>
+                 </form>
+             </div>
+             <div class="contact-description">
+             <h3>Blockchain Services</h3>
+             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+             <button>Learn More</button>
+            </div>
+            </div>
+        </div>   
 
     <footer>
         &copy; Example projects 2021 All rights reserved
